--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,19 +3,39 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     
-    <!-- Widget Colors -->
+    <!-- Primary Colors -->
     <color name="primary_color">#2196F3</color>
+    <color name="primary_variant">#1976D2</color>
+    <color name="secondary_color">#03DAC6</color>
     <color name="accent_color">#FF9800</color>
     <color name="success_color">#4CAF50</color>
     <color name="error_color">#F44336</color>
+    <color name="warning_color">#FFC107</color>
     
     <!-- Text Colors -->
     <color name="text_primary">#212121</color>
     <color name="text_secondary">#757575</color>
+    <color name="text_hint">#9E9E9E</color>
+    <color name="text_hint_light">#FFFFFF80</color>
     
     <!-- Background Colors -->
-    <color name="background_light">#FAFAFA</color>
+    <color name="background_light">#F5F5F5</color>
+    <color name="background_dark">#303030</color>
     <color name="card_background">#FFFFFF</color>
+    <color name="surface_color">#FFFFFF</color>
+    
+    <!-- Progress Colors -->
     <color name="progress_background">#E0E0E0</color>
+    <color name="progress_background_light">#FFFFFF40</color>
+    
+    <!-- Priority Colors -->
+    <color name="priority_high">#F44336</color>
+    <color name="priority_medium">#FF9800</color>
+    <color name="priority_low">#4CAF50</color>
+    
+    <!-- Status Colors -->
+    <color name="status_completed">#4CAF50</color>
+    <color name="status_pending">#FF9800</color>
+    <color name="status_overdue">#F44336</color>
     
 </resources>
