--- a/app/src/main/res/drawable/ic_trophy.xml
+++ b/app/src/main/res/drawable/ic_trophy.xml
@@ -3,9 +3,8 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    
+
     <path
-        android:fillColor="#FF9800"
-        android:pathData="M7,4V2C7,1.45 7.45,1 8,1H16C16.55,1 17,1.45 17,2V4H20C20.55,4 21,4.45 21,5S20.55,6 20,6H19V19C19,20.1 18.1,21 17,21H7C5.9,21 5,20.1 5,19V6H4C3.45,6 3,5.55 3,5S3.45,4 4,4H7ZM9,3V4H15V3H9ZM7,6V19H17V6H7ZM9,8V17H11V8H9ZM13,8V17H15V8H13Z" />
-        
+        android:fillColor="#FFD700"
+        android:pathData="M7,4V3C7,2.45 7.45,2 8,2H16C16.55,2 17,2.45 17,3V4H19C19.55,4 20,4.45 20,5C20,6.1 19.1,7 18,7H17.83C17.42,9.17 15.44,10.8 13,10.97V16H16C16.55,16 17,16.45 17,17S16.55,18 16,18H8C7.45,18 7,17.55 7,17S7.45,16 8,16H11V10.97C8.56,10.8 6.58,9.17 6.17,7H6C4.9,7 4,6.1 4,5C4,4.45 4.45,4 5,4H7ZM9,3V4H15V3H9ZM8.23,6C8.63,8.21 10.54,9.5 12,9.5S15.37,8.21 15.77,6H8.23ZM19,19V20C19,20.55 18.55,21 18,21H6C5.45,21 5,20.55 5,20V19C5,18.45 5.45,18 6,18H18C18.55,18 19,18.45 19,19Z" />
 </vector>
