--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,17 @@
     </style>
 
     <style name="Theme.DailyGoalPoints" parent="Base.Theme.DailyGoalPoints" />
+    <style name="CustomDayCheckbox" parent="Widget.Material3.CompoundButton.CheckBox">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:gravity">center</item>
+        <item name="android:button">@null</item>
+        <item name="android:background">@drawable/custom_checkbox_selector</item>
+        <item name="android:textColor">@color/checkbox_text_color</item>
+        <item name="android:elevation">2dp</item>
+        <item name="android:stateListAnimator">@null</item>
+    </style>
 </resources>
